# ToDo_AI

./: .env  Dockerfile  README.md  alembic.ini  ci.yml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: ef94e4abdba6_create_todos_table.py
api/: main.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  todo.py
app/core/: config.py
app/crud/: todo.py
app/db/: database.py
app/models/: todo.py
app/schemas/: todo.py
docs/: architecture.md  hld.md  lld.md  requirements.md
tests/: conftest.py  test_api.py  test_main.py
