[project]
name = "demo-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "mysql-connector-python (>=8.0.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "demo-app"
version = "0.1.0"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.25.0"
alembic = "^1.13.0"